# quick-cliques

./: CMakeLists.txt
